{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerShipControls",
            "id": "8b5d4619-4e04-4aa9-ae14-a80e66565f96",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "c8b4b72a-3f50-4edb-9c6a-da327436ef4e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "ee2bdde1-94db-48c6-8de2-5e9d4f339ca8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "1e5670c8-0659-48ed-b9e2-66520e78112f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a5450ad1-71ee-4c7e-8855-abb1862af285",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "14db5e9f-488a-4cfd-bc7d-db020dc48320",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "95b3333f-0fac-4706-a4b0-05413e188504",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ca4c946f-0a8a-4eb6-9f8e-246ff00bfff2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "52cf4cae-54d8-4ca1-84f7-f56c5f46e9c2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIControls",
            "id": "2a507d5a-4bc4-4de3-83f3-d88afa99c222",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f78bdb01-5dcb-4870-a837-9a2105c816fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4787f7d4-b561-4f6b-b32e-da1d8a5aee90",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}